[gd_scene load_steps=2 format=3 uid="uid://b2vrme17a4rw1"]

[ext_resource type="Script" uid="uid://dntdd3kjefcc0" path="res://scripts/ui/SacrificeScreen.gd" id="1"]

[node name="SacrificeScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_right = 1282.0
offset_bottom = 720.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="ContentContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 10.0
offset_right = 1280.0
offset_bottom = 660.0

[node name="TabContainer" type="TabContainer" parent="ContentContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="Panel" parent="ContentContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="VBox" type="VBoxContainer" parent="ContentContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="ContentContainer/LeftPanel/VBox"]
layout_mode = 2
text = "YOUR GODS"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ContentContainer/LeftPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="GodList" type="VBoxContainer" parent="ContentContainer/LeftPanel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightPanel" type="Panel" parent="ContentContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="SacrificePanel" type="Control" parent="ContentContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 659.0
offset_right = 120.0
offset_bottom = 699.0
text = "‚Üê Back"
